[metadata]
name = aacrgenie
version = attr: genie.__version__
description = AACR Project GENIE ETL
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Sage-Bionetworks/Genie
author = Thomas Yu
author_email = thomas.yu@sagebionetworks.org
license = MIT
license_files = LICENSE
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
project_urls =
    Bug Tracker = https://github.com/Sage-Bionetworks/Genie/issues
    Source Code = https://github.com/Sage-Bionetworks/Genie

[options]
packages = find:
install_requires =
    synapseclient>=3.0.0, <4.0.0
    pandas==2.0.0
    httplib2>=0.11.3
    PyYAML>=5.1
    chardet>=3.0.4
    pyranges==0.0.115
    numpy<=1.22.2
python_requires = >=3.8, <3.10
include_package_data = True
zip_safe = False
scripts =
    bin/input_to_database.py
    bin/database_to_staging.py

[options.entry_points]
console_scripts =
    genie = genie.__main__:main

[options.extras_require]
dev =
    pytest
    black
    pre-commit
    mypy

docs =
    mkdocs<=1.6.0
    mkdocs-material<=9.5.23
    mkdocs-open-in-new-tab<=1.0.3
    mkdocstrings<=0.25.1
    mkdocstrings-python<=1.10.2
    griffe<=0.36.3

[flake8]
max-line-length = 88
ignore =
    # space before : (needed for how black formats slicing)
    E203
